--- a/src/main/resources/templates/pets/createOrUpdateVisitForm.html
+++ b/src/main/resources/templates/pets/createOrUpdateVisitForm.html
@@ -29,17 +29,24 @@
   </table>
 
   <form th:object="${visit}" class="form-horizontal" method="post">
+    <input type="hidden" name="id" th:value="*{id}" />
     <div class="form-group has-feedback">
       <input
         th:replace="~{fragments/inputField :: input ('Date', 'date', 'date')}"  />
       <input
         th:replace="~{fragments/inputField :: input ('Description', 'description', 'text')}" />
+      <input
+        th:replace="~{fragments/selectField :: select ('Veterinarian', 'vet', ${vets})}" />
     </div>
 
     <div class="form-group">
       <div class="col-sm-offset-2 col-sm-10">
         <input type="hidden" name="petId" th:value="${pet.id}" />
-        <button class="btn btn-default" type="submit">Add Visit</button>
+<!--        <button class="btn btn-default" type="submit">Add Visit</button>-->
+        <button
+          th:with="text=${visit['new']} ? 'Add Visit' : 'Update Visit'"
+          class="btn btn-default" type="submit" th:text="${text}">Add
+          Visit</button>
       </div>
     </div>
   </form>
